save batch actionlog